--- a/src/components/logginBlock/logginBlock.css
+++ b/src/components/logginBlock/logginBlock.css
@@ -1,4 +1,185 @@
 .logginForm{
-        display: flex;
-        flex-direction: column; 
+                display: flex;
+                flex-direction: column;
+                padding-left: 30px;
+                -webkit-box-shadow: -15px 0px 15px 0px rgba(0,0,0,0.69);
+                -moz-box-shadow: -15px 0px 15px 0px rgba(0,0,0,0.69);
+                box-shadow: -15px 0px 15px 0px rgba(0,0,0,0.69);
+                background-color: #A087C1;
+                padding: 0px 30px;
+                z-index: 5;
+                border-radius: 6px;
+                justify-content: center; 
 }
+
+.logginInputContent{
+        display: flex;
+        flex-direction: column;
+        padding: 2% 0%;
+}
+
+.logginComponent {
+        border-radius: 6px;
+        position: absolute;
+        top: 50%; 
+        left: 50%; 
+        transform: translate(-50%, -50%); 
+        display: flex;
+}
+
+.logginForm input{
+        width: 300px;
+        height: 30px;
+        border-radius: 5px;
+        border: 0px;
+}
+
+.logginForm label{
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding: 1% 0%;
+}
+
+.logginLogo{
+                object-fit: contain;             
+}
+
+.carImage{
+        width: 540px;
+        height: 500px;
+        object-fit: cover;
+        filter: blur(3px)
+}
+
+.logginBannerContainer {
+        display: flex;
+        position: absolute;
+        z-index: 4;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 10px;
+        background-color: #faebd7b5;
+        width: 540px;
+        height: 540px;
+        justify-content: center;
+}
+
+.logginBannerContainer h2{
+margin: 0px;
+}
+
+.logginBannerContainer h1{
+        margin: 0px;
+}
+
+.rememberMe h4{
+margin: 0px;
+}
+
+.rememberMe {
+        padding: 2%;
+        margin: 6% 0%;
+        background-color: #5858589a;
+        border-radius: 8px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+.button-87 {
+  margin: 0% 0px;
+  padding: 15px 30px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #0e0d0d 0%, #199af0  51%, #5f5b5a  100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
+}
+
+.checkbox-wrapper-64 input[type="checkbox"] {
+        visibility: hidden;
+        display: none;
+      }
+    
+      .checkbox-wrapper-64 *,
+      .checkbox-wrapper-64 ::after,
+      .checkbox-wrapper-64 ::before {
+        box-sizing: border-box;
+      }
+    
+      /* The switch - the box around the slider */
+      .checkbox-wrapper-64 .switch {
+        font-size: 17px;
+        position: relative;
+        display: inline-block;
+        width: 3.5em;
+        height: 2em;
+      }
+    
+      /* Hide default HTML checkbox */
+      .checkbox-wrapper-64 .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+    
+      /* The slider */
+      .checkbox-wrapper-64 .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #fff;
+        border: 1px solid #adb5bd;
+        transition: .4s;
+        border-radius: 30px;
+      }
+    
+      .checkbox-wrapper-64 .slider:before {
+        position: absolute;
+        content: "";
+        height: 1.4em;
+        width: 1.4em;
+        border-radius: 20px;
+        left: 0.27em;
+        bottom: 0.25em;
+        background-color: #adb5bd;
+        transition: .4s;
+      }
+    
+      .checkbox-wrapper-64 input:checked + .slider {
+        background-color: #007bff;
+        border: 1px solid #007bff;
+      }
+    
+      .checkbox-wrapper-64 input:focus + .slider {
+        box-shadow: 0 0 1px #007bff;
+      }
+    
+      .checkbox-wrapper-64 input:checked + .slider:before {
+        transform: translateX(1.4em);
+        background-color: #fff;
+      }
