--- a/src/components/registerBlock/registerBlock.css
+++ b/src/components/registerBlock/registerBlock.css
@@ -1,4 +1,207 @@
 .registerForm{
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    padding-left: 30px;
+    -webkit-box-shadow: -15px 0px 15px 0px rgba(0,0,0,0.69);
+    -moz-box-shadow: -15px 0px 15px 0px rgba(0,0,0,0.69);
+    box-shadow: -15px 0px 15px 0px rgba(0,0,0,0.69);
+    background-color: #A087C1;
+    padding: 0px 30px;
+    z-index: 5;
+    border-radius: 6px;
+    justify-content: center; 
+    width: 20vw;
 }
+
+.registerComponent {
+border-radius: 6px;
+position: absolute;
+top: 50%; 
+left: 50%; 
+transform: translate(-50%, -50%); 
+display: flex;
+}
+
+.registerForm input{
+height: 30px;
+border-radius: 5px;
+border: 0px;
+}
+
+.registerForm label{
+font-size: 1.2rem;
+font-weight: 600;
+}
+
+.registerLogo{
+    object-fit: contain;
+       
+}
+
+.carImage{
+width: 540px;
+height: 540px;
+object-fit: cover;
+filter: blur(3px)
+}
+
+.registerBannerContainer {
+display: flex;
+position: absolute;
+z-index: 4;
+flex-direction: column;
+align-items: center;
+border-radius: 10px;
+background-color: #faebd7b5;
+width: 540px;
+height: 540px;
+justify-content: center;
+}
+
+.registerBannerContainer h2{
+margin: 0px;
+}
+
+.registerBannerContainer h1{
+margin: 0px;
+}
+
+.registerInputContent{
+    display: flex;
+    flex-direction: column;
+    padding: 2% 0%;
+}
+
+.registerFormContainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.registerPart1{
+    padding: 0% 2%;
+}
+
+.registerPart2{
+    padding: 0% 2%;
+}
+
+.button-87 {
+padding: 15px 30px;
+text-align: center;
+margin: 2%;
+text-transform: uppercase;
+transition: 0.5s;
+background-size: 200% auto;
+color: white;
+border-radius: 10px;
+display: block;
+border: 0px;
+font-weight: 700;
+box-shadow: 0px 0px 14px -7px #f09819;
+background-image: linear-gradient(45deg, #0e0d0d 0%, #199af0  51%, #5f5b5a  100%);
+cursor: pointer;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+}
+
+.button-87:hover {
+background-position: right center;
+/* change the direction of the change here */
+color: #fff;
+text-decoration: none;
+}
+
+.button-87:active {
+transform: scale(0.95);
+}
+
+.textFullname{
+    width: 50%;
+}
+
+.nameContainer{
+    display: flex;
+    width: 100%;
+}
+
+.textFullname{
+    width: 95%;
+}
+
+
+@media (min-width: 960px) and (max-width: 1279px) {
+    .registerComponent{
+        display: flex;
+        margin-top: 1%;
+        flex-direction: column;
+    }
+
+    .registerFormContainer{
+        display: flex;
+        flex-direction: column;
+        padding: 2% 3%;
+        }
+
+    .carImage{
+        height: 85px;
+        max-width: 37vw;
+    }
+
+    .registerForm{
+        width: auto;
+    }
+
+    .registerLogo{
+        width: 100px;
+    }
+
+    .registerBannerContainer h1{
+        display: none;
+    }
+
+    .registerBannerContainer{
+        height: 85px;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        max-width: 37vw;
+        box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.52);
+        z-index: 10;
+    }
+
+    .registerInputContent input{
+        width: auto;
+    }
+
+  }
+
+
+  @media (max-width: 959px){
+    .registerBannerContainer{
+        display: none;
+    }
+
+    .registerInputContent{
+        width: auto;
+    }
+
+    .registerForm{
+        width: auto;
+    }
+
+    .carImage{
+        display: none;
+    }
+
+    .registerFormContainer{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .registerInputContent input{
+        width: auto;
+    }
+
+  }
