--- a/src/components/Popups/burgerMenu/burgerMenu.css
+++ b/src/components/Popups/burgerMenu/burgerMenu.css
@@ -14,6 +14,7 @@
 .bm-main-choose {
     width: 100%;
     height: 100%;
+    margin-top: 3%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
