--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,14 +2,13 @@
     font-size: 1rem;
 }
 
-.componentFooter{
+.componentFooter {
     background-color: rgba(89, 86, 92, 0.274);
     width: 100%;
     margin-top: 2%;
-    position:absolute ;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #f0f0f0; /* Cambia esto al color que desees */
-      
+    background-color: #f0f0f0;
 }
