--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -65,6 +65,60 @@
     display: none;
 }
 
+.userLoggedName{
+margin: 0px 10px;
+}
+
+.dropdownMenu{
+    position: absolute;
+    top: 70%;
+    left: -2vw;
+    background-color: #8a7777;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+}
+
+.dropdownMenu h3{
+    margin: 10px 0px;
+}
+
+.dropdownContainer{
+    position: relative;
+    display: inline-block;
+}
+
+.userLoggedNameContainer{
+    display: flex;
+    font-size: 1.1rem;
+    font-weight: bold;
+    position: absolute;
+    padding: 5px 2vw;
+    cursor: pointer;
+    left: -2vw;
+    background-color: #8a7777;
+    align-items: center;
+}
+
+.dropdownOptionContainer{
+    display: flex;
+    align-items: center;
+    padding: 0px 2vw;
+    cursor: pointer;
+}
+
+.dropdownOptionContainer:hover{
+    background-color: rgba(250, 235, 215, 0.329);
+}
+
+.dropdownOptionContainer h3{
+    margin: 0.5em 13px;
+}
+
+
+
 @media (min-width: 960px) and (max-width: 1279px) {
     .header{
         width: 75%;
@@ -95,8 +149,8 @@
     }
 
     .imageLogo{
-        max-width: 200px;
-        min-width: 180px;
+        max-width: 65px;
+        min-width: 30vw;
     }
 
     .burgerMenu{
