--- a/src/components/cardProducts/cardProducts.css
+++ b/src/components/cardProducts/cardProducts.css
@@ -12,7 +12,32 @@ h3{
 .productInfoContainer{
     display: flex;
     justify-content: space-between;
-    margin: 2% 3%;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    padding: 2.5%;
+}
+
+.productInfoTop{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.productInfoBrandImg{
+    max-width: 30px;
+    object-fit: cover;
+}
+
+.productInfoPriceContainer{
+    width: 100%;
+    display: flex;
+}
+
+.productInfoNameBrand{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .productDescriptionContainer{
@@ -114,12 +139,16 @@ position: relative;
 
 
 .productsArticleHome{
-    background-color: beige;
-    border-radius: 3px;
-    position: relative; /* Agregar posición relativa */
-    overflow: hidden; /* Ocultar el borde dibujado fuera del contenedor */
+    background-color: white;
+    border-radius: 6px;
+    position: relative;
+    overflow: hidden;
     cursor: pointer;
-    padding: 0px;
+    width: 46.7%;
+    display: flex;
+    border: 1px solid;
+    padding: 1%;
+    align-items: center;
 }
 
 .productDescriptionContainerHome{
