--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -5,11 +5,12 @@
     border-radius: 15px;    
 }
 
-.allProductsContainer{
-        display: flex;
-        flex-wrap: wrap; 
-        justify-content: center;
-        gap: 1.5vw;
+.allProductsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    gap: 0.5vw;
 }
 
 @media (min-width: 960px) and (max-width: 1279px) {
